# RepoBaseProyectoP24

./: .envrc  Makefile  README.md  docker-compose.yml  pyproject.toml
src/: mongo_example.py  postgresql_example.py
